ivy: turn off M-x initial ^ symbol

--- a/emacs.org
+++ b/emacs.org
@@ -1579,6 +1579,7 @@ counsel-keys
 
 (setq ivy-use-virtual-buffers t)
 (setq ivy-count-format "%d/%d ")
+(setq ivy-initial-inputs-alist nil)
 (setq max-mini-window-height 0.90) ;; fix for https://github.com/abo-abo/swiper/issues/2397
 
 (require 'cl)
