--- a/emacs.org
+++ b/emacs.org
@@ -1565,7 +1565,7 @@ counsel-keys
 | M-s g   | counsel-grep              |                       |                  |       |
 | M-s s   | counsel-ag                |                       |                  |       |
 | M-s r   | counsel-rg                |                       |                  |       |
-| M-y     | counsel-yank-pop          |                       |                  |       |
+| C-M-y   | counsel-yank-pop          |                       |                  |       |
 | C-M-? b | counsel-descbinds         |                       |                  |       |
 | C-M-? f | counsel-describe-function |                       |                  |       |
 | C-M-? v | counsel-describe-variable |                       |                  |       |
