--- a/emacs.org
+++ b/emacs.org
@@ -1572,10 +1572,11 @@ counsel-keys
 #+BEGIN_SRC emacs-lisp
 (ivy-mode 1)
 
-(setq ivy-use-virtual-buffers t)
-(setq ivy-count-format "%d/%d ")
-(setq ivy-initial-inputs-alist nil)
-(setq ivy-use-selectable-prompt t)
+(setq ivy-use-virtual-buffers t
+      ivy-count-format "%d/%d "
+      ivy-initial-inputs-alist nil
+      ivy-use-selectable-prompt t
+      ivy-re-builders-alist '((t . ivy--regex-ignore-order)))
 (setq max-mini-window-height 0.90) ;; fix for https://github.com/abo-abo/swiper/issues/2397
 
 (defun ivy-dispatching-done-ivy ()
